# polymon_gan

./: .gitignore  Cargo.toml
configs/: verify_circuit.config
examples/: get_merkle_paths.rs  input_preprocess.rs  poseidon_test.rs  verify_test.rs
src/: agg_circuit.rs  circuit.rs  clamp.rs  clamp_dumb.rs  generator_block.rs  input_packing.rs  input_parsing.rs  main.rs
