[package]
name = "polymon_gan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_machinelearning = {path="/home/aweso/halo2_machinelearning"}
ndarray = "0.15.6"
halo2-base = {path = "/home/aweso/modulus_labs/axiom/halo2-lib/halo2-base", default-features = false, features = ["halo2-pse", "dev-graph"]}
# snark-verifier-sdk = {path = "/home/aweso/modulus_labs/axiom/snark-verifier/snark-verifier-sdk/", default-features = false, features = ["loader_halo2", "loader_evm", "halo2-pse"]}
# snark-verifier = { path = "/home/aweso/modulus_labs/axiom/snark-verifier/snark-verifier", default-features = false, features = ["halo2-pse"] }
snark-verifier = { git = "https://github.com/scroll-tech/snark-verifier", branch = "develop" }
snark-verifier-sdk = { git = "https://github.com/scroll-tech/snark-verifier", branch = "develop", default-features=false, features = ["loader_halo2", "loader_evm", "halo2-pse"] }


poseidon = { path = "/home/aweso/modulus_labs/pse/poseidon" }

# halo2-base = {git = "https://github.com/axiom-crypto/halo2-lib"}
# snark-verifier-sdk = {git = "https://github.com/axiom-crypto/snark-verifier"}
# snark-verifier = {git = "https://github.com/axiom-crypto/snark-verifier"}
itertools = "0.10.5"
json = "0.12.4"
plotters = "0.3.4"
once_cell = "1.17.1"
rand_chacha = "0.3.1"
poseidon-circuit = { path = "/home/aweso/modulus_labs/scroll/poseidon-circuit"}
rand = "0.8.5"
regex = "1.8.4"
serde_json = "1.0.104"
serde = "1.0.180"

[patch."https://github.com/scroll-tech/halo2.git"]
# halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_01_20" }
halo2_proofs = {path = "/home/aweso/halo2_pse/halo2/halo2_proofs"}

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = {path = "/home/aweso/halo2_pse/halo2/halo2_proofs"}

[patch."https://github.com/privacy-scaling-explorations/halo2curves"]
halo2curves = { git = "https://github.com/axiom-crypto/halo2.git" }

[patch."https://github.com/privacy-scaling-explorations/poseidon"]
poseidon = { path = "/home/aweso/modulus_labs/pse/poseidon" }
